# strategoxt.debug

./: README.md  build.sh
benchmarking/: do-instr.sh  filesize.sh  linecount.sh  make-strategoxt-di.sh  make-strategoxt.sh  profiling-notes  profiling-results  start-benchmark.sh  str-stats.sh  update-dsldi.sh
benchmarking/benchmark_runtime/: benchmark_suite.sh  do_benchmark.sh  make_plots.sh  parse_frame_duration.py  parse_str_logs.py
examples-projects/detect-leaks-attempt-1/: create.sh
examples-projects/mini-programs/: .project
examples-projects/mini-programs/001_tiny/: tiny.aterm  tiny.str
examples-projects/mini-programs/002_test-prop/: test-prop.aterm  test-prop.str
examples-projects/mini-programs/003_localvar/: localvar.str  run.input  run.output
examples-projects/mini-programs/004_dynamicrule/: localvar.str
examples-projects/mini-programs/005_multiplefiles/: start.str
examples-projects/mini-programs/005_multiplefiles/foo/: bar.str
org.strategoxt.imp.debuggers.stratego/: .project  plugin.xml
org.strategoxt.imp.debuggers.stratego.feature/: .project  feature.xml
org.strategoxt.imp.debuggers.stratego.instrumentation/: .classpath  .gitignore  .project  build.main.xml  config.properties
org.strategoxt.imp.debuggers.stratego.instrumentation/ant-contrib/: dsldi-contrib.xml
org.strategoxt.imp.debuggers.stratego.instrumentation/include/: Stratego-Sugar.str  Stratego-Sugar.tbl
org.strategoxt.imp.debuggers.stratego.instrumentation/lib/: Stratego.dsldi.aterm  libdsldi.rtree  readme.txt  stratego_sugar.rtree
org.strategoxt.imp.debuggers.stratego.instrumentation/trans/: stratego-instrumentation.str
org.strategoxt.imp.debuggers.stratego.instrumentation/trans/instrument/: extract.str  generate-rule.str  generate-step.str  generate-str-statements.str  generate-strategy.str  generate-var.str  generate.str  initialize.str  util.str
org.strategoxt.imp.debuggers.stratego.jar_tests/: .classpath  .gitignore  .project  Test Instrument Stratego.launch  build.junit.xml  build.libs.xml  build.main.xml  config.properties
org.strategoxt.imp.debuggers.stratego.jar_tests/src/util/: DebugInfoBuilder.java  FileTests.java  HybridInterpreterHelper.java  JavaCompilationProgress.java  StrTestConstants.java
org.strategoxt.imp.debuggers.stratego.jar_tests/src/util/str_scripts/: DSLProgramAsATerm.java  ParsedProgramBase.java  RuledefScript.java  StrategycombinatorsScript.java  StrategydefScript.java  TinyScript.java
org.strategoxt.imp.debuggers.stratego.jar_tests/str_scripts/dsldis/: EnterRule.dsldi  EnterStrategy.dsldi  RuleDefEnterExit.dsldi  StepEnterExit.dsldi  StrategyDefEnterExit.dsldi  StrategyStep.dsldi
org.strategoxt.imp.debuggers.stratego.jar_tests/str_scripts/testcases/fragments/cs-syntax/: split-large-strategies.str
org.strategoxt.imp.debuggers.stratego.jar_tests/str_scripts/testcases/fragments/failing-pp/: boo.aterm  foo.aterm  more-string-lit.str  native-calls-compat.abox.aterm  (+5 more)
org.strategoxt.imp.debuggers.stratego.libraries/: .classpath  .gitignore  .project  build.properties  build.xml  config.properties  plugin.xml
org.strategoxt.imp.debuggers.stratego.libraries/lib/runtime/: readme.txt
org.strategoxt.imp.debuggers.stratego.libraries/lib/stratego/: readme.txt
org.strategoxt.imp.debuggers.stratego.runtime/: .classpath  .gitignore  .project  build.main.xml  config.properties  make-lib.sh
org.strategoxt.imp.debuggers.stratego.runtime/c-trans/: Makefile.am  bootstrap  configure.ac
org.strategoxt.imp.debuggers.stratego.runtime/c-trans/lib/: Makefile.am  strdbgruntime.str
org.strategoxt.imp.debuggers.stratego.runtime/c-trans/lib/stratego/: external-calls.str  strategodebugruntime.str
org.strategoxt.imp.debuggers.stratego.runtime/c-trans/tools/: Makefile.am
org.strategoxt.imp.debuggers.stratego.runtime/lib/: readme.txt
org.strategoxt.imp.debuggers.stratego.runtime/trans/stratego/: external-calls.str  strategodebugruntime.str
org.strategoxt.imp.debuggers.stratego.updatesite/: .project  site.xml
org.strategoxt.imp.debuggers.stratego/launching/: Eclipse - Stratego Debugger.launch
(+159 files in other folders)
